# compress_archive_folders

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: archiver.py  config.py  picture_utils.py
core/ui/: main_window.py  tooltip.py  ui_widgets.py
