[project]
name = "compress-archive-folders"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "slavik3001@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "aspose-zip (>=25.7.0,<26.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
